# mediawarn

./: .env.example  .env.external.example  .gitignore  .golangci.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.go-test  Makefile  README.md  STANDALONE-SETUP.md  codecov.yml  debug-go.Dockerfile  docker-compose.dev.yml  docker-compose.external.yml  docker-compose.yml  final-go-test.Dockerfile  init.sql  simple-go-test.Dockerfile  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  code-quality.yml  docker.yml  release.yml  security.yml
api/: Dockerfile  go.mod  go.sum  main.go
api/handlers/: handlers.go
api/logger/: logger.go
api/middleware/: middleware.go
config/: scanner.yaml
docker/: start.sh
frontend/: .eslintrc.js  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  MediaDetail.tsx  MediaLibrary.tsx  Settings.tsx
frontend/src/types/: index.ts
nlp/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg
nlp/app/: logger.py  main.py  models.py  subtitle_parser.py  worker.py
scanner/: Dockerfile  go.mod  go.sum
scanner/cmd/: main.go
scanner/internal/config/: config.go
scanner/internal/database/: database.go
scanner/internal/logger/: logger.go
scanner/internal/queue/: queue.go
scanner/internal/scanner/: scanner.go
