[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"